# cashflow-app-v2

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260305_a1b2c3d4_b1_add_remaining_tables.py  20260305_c8699e959445_create_domain_enums_and_imports.py  20260311_c1_add_n12m_metadata_columns.py  20260314_c4_delivery_counts.py  20260314_c4_fixes.py
backend/app/: config.py  db.py  main.py
backend/app/domain/: enums.py  models.py  schemas.py
backend/app/middleware/: logging.py  request_id.py
backend/app/routers/: imports.py
backend/app/services/: calc_rules.json  cascade_service.py
backend/app/services/excel_parser/: base.py  template_parser.py
backend/tests/: test_health.py  test_middleware.py
backend/tests/fixtures/: build_fixture.py  expected_output.json  sample_import.xlsx
backend/tests/integration/: test_data_entry_endpoint.py  test_delivery_counts_persist.py  test_e2e_calculations.py  test_forecast_endpoint.py  test_import_file_upload.py  test_import_router.py  test_phase_comparison_endpoint.py  test_pnl_endpoint.py
backend/tests/unit/: test_cascade_n12m.py  test_cascade_ncf.py  test_cascade_per_delivery.py  test_cascade_pnl.py  test_cascade_rules_sync.py  test_cascade_service.py  test_db.py  test_drift.py  test_enums.py  test_excel_parser.py  test_models.py  test_new_models.py  test_schemas.py
docs/: TODO.md  architecture-overview.md  architecture-slides.md  data-dictionary.md  pnl-spec.md
(+61 files in other folders)
